--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "scripts": {
+    "all": "npx playwright test",
+    "daily" : "npx playwright test tests/get-shipping-ids.test.ts",
+    "summary" : "npx playwright test tests/quick-summary.test.ts",
+    "shipping" : "npx playwright test tests/shipping-status.test.ts",
+    "to-ship" : "npx playwright test tests/get-data.test.ts"
+  },
   "devDependencies": {
     "@types/node": "^17.0.5",
     "playwright": "^1.17.1",
