--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "scripts": {
     "pretest": "tsc --incremental -p ./tsconfig.json",
     "all": "npx playwright test",
-    "daily" : "npx playwright test tests/get-shipping-ids.test.ts",
-    "summary" : "npx playwright test tests/quick-summary.test.ts",
-    "shipping" : "npm run pretest && npx playwright test tests/shipping-status.test.ts",
+    "daily" : "npx playwright test tests/get-shipping-status.test.ts",
+    "q-summary" : "npx playwright test tests/quick-summary.test.ts",
+    "s-summary" : "npm run pretest && npx playwright test tests/shipping-summary.test.ts",
     "to-ship" : "npx playwright test tests/get-data.test.ts"
   },
   "devDependencies": {
