--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "pretest": "tsc --incremental -p ./tsconfig.json",
     "all": "npx playwright test",
     "shipping" : "npx playwright test tests/get-shipping-status.test.ts",
-    "q-sum" : "npx playwright test tests/quick-summary.test.ts",
     "to-ship" : "npx playwright test tests/get-data.test.ts",
     "test" : "npx playwright test tests/practice.test.ts",
-    "net" : "npx playwright test tests/get-net.test.ts"
+    "net" : "npx playwright test tests/get-net.test.ts",
+    "completed" : "npx playwright test tests/completed.test.ts"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
