--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "to-ship" : "npx playwright test tests/get-data.test.ts",
     "test" : "npx playwright test tests/practice.test.ts",
     "net" : "npx playwright test tests/get-net.test.ts",
-    "completed" : "npx playwright test tests/completed.test.ts"
+    "completed" : "npx playwright test tests/completed.test.ts",
+    "d2d" : "npx playwright test tests/get-data.test.ts && npx playwright test tests/get-shipping-status.test.ts"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
