--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@types/node": "^17.0.5",
     "playwright": "^1.17.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "lodash": "^4.17.21"
   },
   "dependencies": {
     "@playwright/test": "^1.17.1"
