--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "shipping" : "npx playwright test tests/get-shipping-status.test.ts",
     "to-ship" : "npx playwright test tests/get-data.test.ts",
     "test" : "npx playwright test tests/practice.test.ts",
-    "net" : "npx playwright test tests/get-net.test.ts",
+    "net" : "npx playwright test tests/update-db.test.ts && npx playwright test tests/get-net.test.ts",
     "completed" : "npx playwright test tests/completed.test.ts",
     "update" : "npx playwright test tests/update-db.test.ts",
     "d2d" : "npx playwright test tests/get-data.test.ts && npx playwright test tests/get-shipping-status.test.ts"
